--- a/admin/assets/scss/components/_admin.scss
+++ b/admin/assets/scss/components/_admin.scss
@@ -3,7 +3,7 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 6;
+    z-index: 8;
     padding: $title-bar-padding;
     padding-left: $title-bar-padding-left + $toggle-navigation-width + 2 * $toggle-navigation-left;
     background-color: $color-base-700;
@@ -38,7 +38,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 8;
+    z-index: 10;
     padding: $sidebar-padding-h $sidebar-padding-v;
     width: $sidebar-width;
     background: $sidebar-background-gradient;
@@ -60,7 +60,7 @@
     position: fixed;
     top: $toggle-navigation-top;
     left: $toggle-navigation-left;
-    z-index: 10;
+    z-index: 12;
     margin: 0;
     border: none;
     background-color: transparent;
