--- a/admin/assets/scss/components/_date-picker.scss
+++ b/admin/assets/scss/components/_date-picker.scss
@@ -6,7 +6,7 @@
 .calendar {
     position: absolute;
     top: 100%;
-    z-index: 4;
+    z-index: 8;
     display: none;
     margin: $calendar-margin-top $calendar-margin-h $calendar-margin-bottom;
     padding: $calendar-padding;
