--- a/admin/assets/scss/components/_dropdowns.scss
+++ b/admin/assets/scss/components/_dropdowns.scss
@@ -14,7 +14,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 4;
+    z-index: 8;
     display: none;
     float: left;
     margin-top: $dropdown-menu-margin-top;
