--- a/admin/assets/scss/components/_modals.scss
+++ b/admin/assets/scss/components/_modals.scss
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 15;
+    z-index: 16;
     background-color: $backdrop-background-color;
 }
 
