--- a/admin/assets/scss/components/_notifications.scss
+++ b/admin/assets/scss/components/_notifications.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: $notification-container-top;
     right: $notification-container-right;
-    z-index: 11;
+    z-index: 12;
 }
 
 .notification {
